Improve game styling + fix alignment ~ adjust colors and layout of elements

--- a/mastermind/style.css
+++ b/mastermind/style.css
@@ -1,6 +1,3 @@
-body{
-    background-color:cornflowerblue
-}
 
 .container{
     display:grid;
@@ -9,21 +6,29 @@ body{
     width:100%;
     height:100%;
 }
-#hints{
-    text-align: right;
-    padding-right: 20px;
-}
-#answers{
-    text-align:left;
-    padding-left: 20px;
-}
 
 .board{
-    border: 5px solid black;
-    width: 500px;
-    height: 800px;
+    border: 5px solid darkblue;
+    background-color:cornflowerblue;
+    border-radius: 30px;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 70px 1fr;
+    text-align: center;
+    width:100%;
+    min-width: 400px;
+    box-shadow: 10px 5px 5px rgba(0,0,0,0.3);
+    padding-bottom: 20px;
+    padding-top: 20px;
+}
+
+.btncell{
+    display:flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+}
+.chkbtn{
+    width:100%;
 }
 
 .colorpin,.hintpin{
@@ -33,7 +38,7 @@ body{
     display: inline-block;
     background-color:white;
     margin: 5px;
-    margin-top:30px;
+    margin-top: 10px;
 }
 
 .colorpin:disabled{
